Skeleton of the Bioconductor library

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,1 +1,13 @@
-exportPattern("^[[:alpha:]]+")
+exportPattern("^[[:alpha:]]+") # Exports all alphanumeric variables (and S4 classes from 2.13.0). Not suggested in production code.
+
+import(GenomicRanges, Rsamtools) # importFrom(foo, f, g) to be more specific.
+
+exportClasses("RoarDataset")
+
+export(
+  CreateRoarDataset 
+)
+
+#exportMethods(
+#)
+
