--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: roar
 Type: Package
-Title: Identify differential APA usage from RNAseq alignment data
+Title: Identify differential APA usage from RNA-seq alignments
 Version: 0.1.1
 Date: 2013-05-04
 Author: Elena Grassi
 Maintainer: Elena Grassi <grassi.e@gmail.com>
-Description: More about what it does (maybe more than one line), only
-   one paragraph
+Description: Identify preferential usage of APA sites, comparing two biological conditions, starting from known alternative sites and alignments obtained from standard RNA-seq experiments.
 License: GPL-3
 Depends: GenomicRanges, Rsamtools, rtracklayer
+URL: TODO
