--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,4 +8,5 @@ Maintainer: Elena Grassi <grassi.e@gmail.com>
 Description: Identify preferential usage of APA sites, comparing two biological conditions, starting from known alternative sites and alignments obtained from standard RNA-seq experiments.
 License: GPL-3
 Depends: GenomicRanges, Rsamtools, rtracklayer
+Suggests: RUnit, BiocGenerics 
 URL: TODO
