--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,11 +1,12 @@
-exportPattern("^[[:alpha:]]+") # Exports all alphanumeric variables (and S4 classes from 2.13.0). Not suggested in production code.
+#exportPattern("^[[:alpha:]]+") # Exports all alphanumeric variables (and S4 classes from 2.13.0). Not suggested in production code.
 
 import(GenomicRanges, rtracklayer, Rsamtools) # importFrom(foo, f, g) to be more specific.
 
 exportClasses("RoarDataset")
 
 export(
-  RoarDataset 
+  RoarDataset,
+  RoarDatasetFromFiles
 )
 
 exportMethods(
