--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,8 @@ Date: 2013-05-04
 Author: Elena Grassi
 Maintainer: Elena Grassi <grassi.e@gmail.com>
 Description: Identify preferential usage of APA sites, comparing two biological conditions, starting from known alternative sites and alignments obtained from standard RNA-seq experiments.
+biocViews: Sequencing, HighThroughputSequencing, RNAseq, Transcription
 License: GPL-3
 Depends: R (>= 3.0.1), GenomicRanges, Rsamtools, rtracklayer, methods
-Suggests: RUnit, BiocGenerics
+Suggests: RUnit, BiocGenerics, RNAseqData.HNRNPC.bam.chr14
 URL: TODO
