--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,7 +1,7 @@
 #exportPattern("^[[:alpha:]]+") # Exports all alphanumeric variables (and S4 classes from 2.13.0). Not suggested in production code.
 
 import(GenomicRanges, Rsamtools, methods)
-importFrom(rtracklayer, import)
+importFrom("rtracklayer", import)
 
 exportClasses("RoarDataset")
 
