--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,6 @@ Maintainer: Elena Grassi <grassi.e@gmail.com>
 Description: Identify preferential usage of APA sites, comparing two biological conditions, starting from known alternative sites and alignments obtained from standard RNA-seq experiments.
 biocViews: Sequencing, HighThroughputSequencing, RNAseq, Transcription
 License: GPL-3
-Depends: R (>= 3.0.1), GenomicRanges
-Imports: Rsamtools, rtracklayer, methods
+Depends: R (>= 3.0.1), GenomicRanges, rtracklayer, Rsamtools, methods
 Suggests: RUnit, BiocGenerics, RNAseqData.HNRNPC.bam.chr14
 URL: TODO
