--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,6 +1,6 @@
 #exportPattern("^[[:alpha:]]+") # Exports all alphanumeric variables (and S4 classes from 2.13.0). Not suggested in production code.
 
-import(GenomicRanges, Rsamtools, methods)
+import(GenomicRanges, Rsamtools, methods, GenomicAlignments)
 importFrom(rtracklayer, import)
 
 exportClasses("RoarDataset")
