Removed all depends

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@ importFrom(rtracklayer, import)
 #importFrom(GenomicRanges, SummarizedExperiment, GRanges, assays, assay, rowData, colData)
 #importFrom(GenomicAlignments, readGAlignments, summarizeOverlaps, qwidth)
 import(methods, GenomicRanges, GenomicAlignments)
+#import(methods)
 
 exportClasses("RoarDataset")
 
