News plus import varie

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,5 @@
 importFrom(rtracklayer, import)
+importFrom(IRanges, DataFrame)
 #importFrom(GenomicRanges, SummarizedExperiment, GRanges, assays, assay, rowData, colData)
 #importFrom(GenomicAlignments, readGAlignments, summarizeOverlaps, qwidth)
 import(methods, GenomicRanges, GenomicAlignments)
