--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: roar
 Type: Package
 Title: Identify differential APA usage from RNA-seq alignments
-Version: 0.99.3
+Version: 0.99.6
 Date: 2013-05-04
 Author: Elena Grassi
 Maintainer: Elena Grassi <grassi.e@gmail.com>
@@ -9,5 +9,5 @@ Description: Identify preferential usage of APA sites, comparing two biological 
 biocViews: Sequencing, HighThroughputSequencing, RNAseq, Transcription
 License: GPL-3
 Depends: R (>= 3.0.1)
-Imports: GenomicRanges, GenomicAlignments(>= 0.99.4), methods, rtracklayer
+Imports: GenomicRanges, GenomicAlignments(>= 0.99.4), methods, rtracklayer, IRanges
 Suggests: RUnit, BiocGenerics, RNAseqData.HNRNPC.bam.chr14
