--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,5 @@
 importFrom(rtracklayer, import)
-importFrom(IRanges, DataFrame)
+import(S4Vectors)
 #importFrom(GenomicRanges, SummarizedExperiment, GRanges, assays, assay, rowData, colData)
 #importFrom(GenomicAlignments, readGAlignments, summarizeOverlaps, qwidth)
 import(methods, GenomicRanges, GenomicAlignments)
