Commit made by the Bioconductor Git-SVN bridge. Consists of 1 commit.
Commit information:

Commit id: 73c7df51a91db9c701aaac83f532c1d6d024f033

    Added the github repo URL

        Testing the SVNgit bridge
    
Committed by: Elena Grassi
Author Name: Elena Grassi
Commit date: 2014-09-17 09:24:18 +0200
Author date: 2014-09-17 09:24:18 +0200


git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/roar@94185 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,4 @@ License: GPL-3
 Depends: R (>= 3.0.1)
 Imports: GenomicRanges, GenomicAlignments(>= 0.99.4), methods, rtracklayer, IRanges
 Suggests: RUnit, BiocGenerics, RNAseqData.HNRNPC.bam.chr14
+URL: https://github.com/vodkatad/roar/
