Fix for new S4Vectors structure
  This svn commit was lost while
  setting up the gitSVN bridge, now
  it's considered:
  r94060 | hpages@fhcrc.org

  resync with latest changes in
  IRanges/S4Vectors

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,5 @@
 importFrom(rtracklayer, import)
-importFrom(IRanges, DataFrame)
+importFrom(S4Vectors, DataFrame)
 #importFrom(GenomicRanges, SummarizedExperiment, GRanges, assays, assay, rowData, colData)
 #importFrom(GenomicAlignments, readGAlignments, summarizeOverlaps, qwidth)
 import(methods, GenomicRanges, GenomicAlignments)
