--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,6 @@ Description: Identify preferential usage of APA sites, comparing two biological 
 biocViews: Sequencing, HighThroughputSequencing, RNAseq, Transcription
 License: GPL-3
 Depends: R (>= 3.0.1)
-Imports: GenomicRanges, GenomicAlignments(>= 0.99.4), methods, rtracklayer, IRanges
+Imports: GenomicRanges, GenomicAlignments(>= 0.99.4), methods, rtracklayer, S4Vectors
 Suggests: RUnit, BiocGenerics, RNAseqData.HNRNPC.bam.chr14
 URL: https://github.com/vodkatad/roar/
