RoarDataset class now extends new RangedSummarizedExperiment class from SummarizedExperiment package instead of "old" SummarizedExperiment class from GenomicRanges package.
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/roar@103657 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,6 +1,6 @@
 importFrom(rtracklayer, import)
 importFrom(S4Vectors, DataFrame)
-import(methods, GenomicRanges, GenomicAlignments)
+import(methods, GenomicRanges, SummarizedExperiment, GenomicAlignments)
 
 exportClasses("RoarDataset")
 
