--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: roar
 Type: Package
 Title: Identify differential APA usage from RNA-seq alignments
-Version: 1.5.0
+Version: 1.5.1
 Date: 2013-05-04
 Author: Elena Grassi
 Maintainer: Elena Grassi <grassi.e@gmail.com>
@@ -9,6 +9,6 @@ Description: Identify preferential usage of APA sites, comparing two biological 
 biocViews: Sequencing, HighThroughputSequencing, RNAseq, Transcription
 License: GPL-3
 Depends: R (>= 3.0.1)
-Imports: GenomicRanges, GenomicAlignments(>= 0.99.4), methods, rtracklayer, S4Vectors
+Imports: GenomicRanges, SummarizedExperiment, GenomicAlignments(>= 0.99.4), methods, rtracklayer, S4Vectors
 Suggests: RUnit, BiocGenerics, RNAseqData.HNRNPC.bam.chr14
 URL: https://github.com/vodkatad/roar/
