Really bad workaround for generics

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,7 +20,12 @@ exportMethods(
    countResults,
    standardFilter,
    pvalueFilter,
-   pvalueCorrectFilter
+   pvalueCorrectFilter,
+   mcountPrePost,
+   mcomputeRoars,
+   mcomputePvals,
+   mcomputePairedPvals,
+   mfpkmResults
 #   cores
 #  "cores<-"
 )
