--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,8 @@ exportClasses("RoarDataset")
 export(
   RoarDataset,
   RoarDatasetFromFiles,
-  RoarDatasetMultipleAPAFromFiles
+  RoarDatasetMultipleAPAFromFiles,
+  RoarDatasetMultipleAPA
 )
 
 exportMethods(
