--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,6 +1,6 @@
 importFrom(rtracklayer, import)
-importFrom(S4Vectors, DataFrame)
-import(methods, GenomicRanges, SummarizedExperiment, GenomicAlignments)
+importFrom(S4Vectors, DataFrame, Rle)
+import(methods, GenomicRanges, SummarizedExperiment, GenomicAlignments, IRanges)
 
 exportClasses("RoarDataset")
 
