Fixed NAMESPACE as suggested by check

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,6 +1,8 @@
 importFrom(rtracklayer, import)
 importFrom(S4Vectors, DataFrame, Rle)
 import(methods, GenomicRanges, SummarizedExperiment, GenomicAlignments, IRanges)
+importFrom(stats, fisher.test, p.adjust, pchisq)
+importFrom(utils, head, tail)
 
 exportClasses("RoarDataset")
 
