fully import the BiocGenerics and S4Vectors packages
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/roar@113973 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,8 +1,6 @@
+import(methods, BiocGenerics, S4Vectors, IRanges, GenomicRanges, SummarizedExperiment, GenomicAlignments)
 importFrom(rtracklayer, import)
-importFrom(S4Vectors, DataFrame, Rle)
-import(methods, GenomicRanges, SummarizedExperiment, GenomicAlignments, IRanges)
 importFrom(stats, fisher.test, p.adjust, pchisq)
-importFrom(utils, head, tail)
 
 exportClasses("RoarDataset")
 
