--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: roar
 Type: Package
 Title: Identify differential APA usage from RNA-seq alignments
-Version: 1.7.2
-Date: 2013-05-04
+Version: 1.7.3
+Date: 2016-02-24
 Author: Elena Grassi
 Maintainer: Elena Grassi <grassi.e@gmail.com>
 Description: Identify preferential usage of APA sites, comparing two biological conditions, starting from known alternative sites and alignments obtained from standard RNA-seq experiments.
 biocViews: Sequencing, HighThroughputSequencing, RNAseq, Transcription
 License: GPL-3
 Depends: R (>= 3.0.1)
-Imports: GenomicRanges, IRanges, SummarizedExperiment, GenomicAlignments(>= 0.99.4), methods, rtracklayer, S4Vectors
-Suggests: BiocGenerics, RNAseqData.HNRNPC.bam.chr14, testthat
+Imports: methods, BiocGenerics, S4Vectors, IRanges, GenomicRanges, SummarizedExperiment, GenomicAlignments (>= 0.99.4), rtracklayer
+Suggests: RNAseqData.HNRNPC.bam.chr14, testthat
 URL: https://github.com/vodkatad/roar/
