--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,7 @@ import(methods, BiocGenerics, S4Vectors, IRanges, GenomicRanges, SummarizedExper
 importFrom(rtracklayer, import)
 importFrom(stats, fisher.test, p.adjust, pchisq)
 
-exportClasses("RoarDataset")
+exportClasses("RoarDataset", "RoarDatasetMultipleAPA")
 
 export(
   RoarDataset,
