Added input sanity checks
From: Elena Grassi <data@clo>

git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/roar@114055 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,4 @@
-import(methods, BiocGenerics, S4Vectors, IRanges, GenomicRanges, SummarizedExperiment, GenomicAlignments)
+import(methods, BiocGenerics, S4Vectors, IRanges, GenomicRanges, SummarizedExperiment, GenomicAlignments, GenomeInfoDb)
 importFrom(rtracklayer, import)
 importFrom(stats, fisher.test, p.adjust, pchisq)
 
