--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: roar
 Type: Package
 Title: Identify differential APA usage from RNA-seq alignments
-Version: 1.7.6
+Version: 1.7.7
 Date: 2016-02-26
 Author: Elena Grassi
 Maintainer: Elena Grassi <grassi.e@gmail.com>
@@ -9,6 +9,6 @@ Description: Identify preferential usage of APA sites, comparing two biological 
 biocViews: Sequencing, HighThroughputSequencing, RNAseq, Transcription
 License: GPL-3
 Depends: R (>= 3.0.1)
-Imports: methods, BiocGenerics, S4Vectors, IRanges, GenomicRanges, SummarizedExperiment, GenomicAlignments (>= 0.99.4), rtracklayer
+Imports: methods, BiocGenerics, S4Vectors, IRanges, GenomicRanges, SummarizedExperiment, GenomicAlignments (>= 0.99.4), rtracklayer, GenomeInfoDb
 Suggests: RNAseqData.HNRNPC.bam.chr14, testthat
 URL: https://github.com/vodkatad/roar/
