--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ exportClasses("RoarDataset", "RoarDatasetMultipleAPA")
 export(
   RoarDataset,
   RoarDatasetFromFiles,
+  PairedRoarDatasetFromFiles,
   RoarDatasetMultipleAPAFromFiles,
   RoarDatasetMultipleAPA
 )
